--- a/style.css
+++ b/style.css
@@ -58,12 +58,21 @@ nav a {
 }
 
 .loginbutton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #4caf50;
   height: 35px;
   width: 100px;
   color: white;
   border: none;
   cursor: pointer;
+}
+
+.login-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 hr {
@@ -79,6 +88,9 @@ hr {
   height: 20px;
   margin-right: 5px;
   vertical-align: middle;
+}
+.wordcolorgreen {
+  color: #4caf50;
 }
 
 .content-section {
@@ -121,9 +133,10 @@ hr {
 
 .shopnow {
   width: 140px;
-  height: 60px;
+  height: 40px;
+  margin-bottom: 125px;
   margin-left: 41px;
   background-color: #4caf50;
   color: floralwhite;
-  align-self: flex-start;
+  border: none;
 }
